--- a/footer.html
+++ b/footer.html
@@ -5,7 +5,7 @@
           <tr>
             <td style="vertical-align: top;">
               <h2 style="font-size: 24px; color: #000000; margin: 0 0 5px;">Siddharth Shekhar</h2>
-              <p style="font-size: 16px; color: #666; margin: 0 0 10px;">Software Engineer, Growth Hacking, and Mentor. 4000+ hours teaching tech and business skills.</p>
+              <p style="font-size: 16px; color: #666; margin: 0 0 10px;">Software Engineer, Growth Hacker, and Mentor. 4000+ hours teaching tech and business skills.</p>
               <p style="font-size: 14px; color: #666; margin: 0 0 10px;">Co-founder, <a href="https://sarg.io" style="color: #000000; text-decoration: none;">sarg.io</a> | Board of Trustees, <a href="https://sargfoundation.org" style="color: #000000; text-decoration: none;">Sarg Foundation</a></p>
             </td>
           </tr>
