--- a/footer.html
+++ b/footer.html
@@ -13,13 +13,13 @@
         <hr style="border: none; border-top: 1px solid #dddddd; margin: 15px 0;">
         <table cellpadding="0" cellspacing="0" border="0" style="margin-bottom: 10px;">
           <tr>
-            <td style="padding-right: 15px;"><span style="color: #000000; font-weight: bold;">E</span> <a href="mailto:hello@siddharthshekhar.to" style="color: #666; text-decoration: none;">hello@siddharthshekhar.to</a></td>
+            <td style="padding-right: 15px;"><span style="color: #000000; font-weight: bold;">E</span> <a href="mailto:hello@siddharthshekhar.io" style="color: #666; text-decoration: none;">hello@siddharthshekhar.io</a></td>
           </tr>
           <tr>
             <td style="padding-right: 15px;"><span style="color: #000000; font-weight: bold;">P</span> <a href="tel:+442086388538" style="color: #666; text-decoration: none;">+44 20 8638 8538</a></td>
           </tr>
           <tr>
-            <td style="padding-right: 15px;"><span style="color: #000000; font-weight: bold;">W</span> <a href="https://siddharthshekhar.to" style="color: #666; text-decoration: none;">siddharthshekhar.to</a></td>
+            <td style="padding-right: 15px;"><span style="color: #000000; font-weight: bold;">W</span> <a href="https://siddharthshekhar.io" style="color: #666; text-decoration: none;">siddharthshekhar.io</a></td>
           </tr>
           <tr>
             <td><a href="https://calendly.com/siddharthshekhar/virtual-coffee-with-siddharth" style="color: #000000; text-decoration: none;">Schedule a virtual coffee</a></td>
